--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   from {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
-    transform: scale3d(0.3, 0.3, 0.3);
+            transform: scale3d(0.3, 0.3, 0.3);
   }
 
   50% {
@@ -14,7 +14,7 @@
   from {
     opacity: 0;
     -webkit-transform: scale3d(0.3, 0.3, 0.3);
-    transform: scale3d(0.3, 0.3, 0.3);
+            transform: scale3d(0.3, 0.3, 0.3);
   }
 
   50% {
@@ -24,7 +24,7 @@
 
 .zoomIn {
   -webkit-animation-name: zoomIn;
-  animation-name: zoomIn;
+          animation-name: zoomIn;
 }
 
 html, body {
@@ -371,8 +371,9 @@ li.active > a {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 20px 18px;
-  width: 240px;
+  box-sizing: border-box;
+  padding: 20px 17px 22px 19px;
+  width: 277px;
   z-index: 1;
 
   background-color: #f8f7f4;
@@ -396,7 +397,7 @@ li.active > a {
 
 .login-links a {
   font-size: 13px;
-  line-height: 24px;
+  line-height: 22px;
   text-decoration: underline;
   text-decoration-color: rgba(50, 50, 50, 0.3);
   color: #323232;
@@ -637,6 +638,8 @@ a.basket-btn:focus {
   padding: 10px 41px;
   font-size: 32px;
   line-height: 44px;
+
+  border-radius: 35px;
 }
 
 .slider-item-2 {
@@ -750,7 +753,7 @@ a.basket-btn:focus {
 .catalog-item-price {
   position: relative;
   left: -60px;
-  top: -62px;
+  top: -65px;
   margin: 0;
   z-index: 2;
 
@@ -836,11 +839,11 @@ a.basket-btn:focus {
 }
 
 .catalog-item:nth-child(n + 5) {
-  margin-top: -14px;
+  margin-top: -15px;
 }
 
 .inner-wrapper .catalog {
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 }
 
 .about {
@@ -973,7 +976,7 @@ a.basket-btn:focus {
 
 .subscribe input {
   box-sizing: border-box;
-  padding: 15px;
+  padding: 14px;
   height: 44px;
   width: 368px;
 
@@ -993,7 +996,7 @@ a.basket-btn:focus {
 }
 
 .subscribe-btn {
-  padding: 10px 20px;
+  padding: 10px 18px;
 
 }
 
@@ -1032,8 +1035,9 @@ a.basket-btn:focus {
   position: absolute;
   right: 0;
   top: -367px;
-  width: 252px;
-  padding: 30px 26px;
+  box-sizing: border-box;
+  width: 302px;
+  padding: 29px 25px 31px;
   font-size: 14px;
   line-height: 20px;
   color: #323232;
@@ -1044,7 +1048,7 @@ a.basket-btn:focus {
 
 .contacts-info p {
   margin: 0;
-  margin-bottom: 17px;
+  margin-bottom: 20px;
 }
 
 .contacts-info b {
@@ -1055,7 +1059,7 @@ a.basket-btn:focus {
   font-weight: 700;
 }
 
-.contacts-info-tel {
+b.contacts-info-tel {
   padding: 4px 0;
 
   font-size: 18px;
@@ -1063,7 +1067,8 @@ a.basket-btn:focus {
 }
 
 .contacts-info-btn {
-  padding: 11px 27px;
+  margin-top: 3px;
+  padding: 10px 27px;
 }
 
 a.contacts-info-btn:hover,
@@ -1130,7 +1135,7 @@ a.contacts-info-btn:active {
   align-items: flex-start;
   margin: 0;
   padding: 0;
-  margin-top: 36px;
+  margin-top: 35px;
   margin-bottom: 30px;
   width: 353px;
 
@@ -1162,16 +1167,15 @@ a.contacts-info-btn:active {
 }
 
 .copyright {
-  margin: 18px 0 24px;
+  margin: 19px 0 24px;
   width: 190px;
 
   font-size: 12px;
   line-height: 18px;
 }
 
-.copyright img {
+.copyright-logo {
   display: block;
-  margin-bottom: 5px;
 }
 
 .modal-feedback {
@@ -1383,12 +1387,16 @@ a.contacts-info-btn:active {
   box-sizing: border-box;
   width: 193px;
   height: 36px;
-  padding: 7px 11px;
+  padding: 7px 14px;
   -webkit-appearance: none;
 
   color: #ffffff;
 
-  background: url(../img/icon-down-dir.svg) no-repeat 93% center;
+  border: none;
+  background-image: url(../img/icon-down-dir.svg);
+  background-repeat: no-repeat;
+  background-position-x: 93%;
+  background-position-y: center;
   cursor: pointer;
 }
 
@@ -1396,7 +1404,7 @@ a.contacts-info-btn:active {
 .catalog-filter-dropdown:focus {
   color: #323232;
 
-  background: url(../img/icon-down-dir-hover.svg) no-repeat 93% center;
+  background-image: url(../img/icon-down-dir-hover.svg) no-repeat 93% center;
 }
 
 .range-controls {
@@ -1450,14 +1458,15 @@ a.contacts-info-btn:active {
 
 .catalog-filter-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
-  padding: 0 15px;
+  padding: 0 17px 0 14px;
 
   list-style: none;
 }
 
 .catalog-filter-label {
-  padding-left: 32px;
+  padding-left: 33px;
   cursor: pointer;
 }
 
@@ -1556,6 +1565,7 @@ a.contacts-info-btn:active {
 }
 
 .catalog-filter-btn {
+  margin-top: 5px;
   padding: 8px 29px;
 
   color: #ffffff;
@@ -1578,11 +1588,14 @@ a.contacts-info-btn:active {
 }
 
 .pagination-list {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 28px;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
   align-items: center;
-  margin-bottom: 28px;
 
   font-size: 16px;
   line-height: 18px;
