--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,10 @@
           animation-name: zoomIn;
 }
 
-html, body {
-  min-width: 1200px;;
-}
-
 body {
   margin: 0;
   padding: 0;
+  min-width: 1200px;
 
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
@@ -670,6 +667,12 @@ a.basket-btn:focus {
   background: #9d8b84 url(../img/Slider-3-min.png) top center no-repeat;
 }
 
+#slide-1:focus ~ .page-wrapper label[for="slide-1"],
+#slide-2:focus ~ .page-wrapper label[for="slide-2"],
+#slide-3:focus ~ .page-wrapper label[for="slide-3"] {
+  outline: 1px solid #1e90ff;
+}
+
 .specials {
   display: flex;
   justify-content: space-between;
@@ -986,13 +989,13 @@ a.basket-btn:focus {
 
 .subscribe input:hover {
   border: 2px solid #c7c6c5;
-  padding: 14px;
+  padding: 13px;
 }
 
 .subscribe input:focus {
   outline: none;
   border: 2px solid #8fbdec;
-  padding: 14px;
+  padding: 13px;
 }
 
 .subscribe-btn {
@@ -1193,12 +1196,12 @@ a.contacts-info-btn:active {
   background-color: #f8f7f4;
   border-radius: 15px;
 
-  animation: zoomIn 0.6s;
   display: none;
 }
 
 .modal-feedback-show {
   display: block;
+  animation: zoomIn 0.6s;
 }
 
 .modal-feedback-wrapper {
@@ -1388,7 +1391,7 @@ a.contacts-info-btn:active {
   width: 193px;
   height: 36px;
   padding: 7px 14px;
-  -webkit-appearance: none;
+  appearance: none;
 
   color: #ffffff;
 
